Fix the cell layout issue when creating new folder (iOS bookmarks)

Make the trailingAnchor of the stackView inside bookmarkTableCell always
equals to contentView's trailingAnchor.  This can prevent
crbug.com/778231 where the stackView's width doesn't grow as expected
when editing folder name on iOS 10.

Bug: 791976
Change-Id: I71fac7e335561fe7f54beb1062602976b0b2a280
Reviewed-on: https://chromium-review.googlesource.com/809988
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Commit-Queue: Marti Wong <martiw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522071}
Former-commit-id: 9dca51d2749b77c0f89d5be74a2f5feb060e5ce9