ios/chrome/browser/ui/bookmarks/cells/bookmark_table_cell.mm
@@ -104,7 +104,7 @@ const CGFloat kBookmarkTableCellImagePadding = 16.0;
       [contentStack.leadingAnchor
           constraintEqualToAnchor:self.contentView.leadingAnchor],
       [contentStack.trailingAnchor
-          constraintLessThanOrEqualToAnchor:self.contentView.trailingAnchor]
+          constraintEqualToAnchor:self.contentView.trailingAnchor]
     ]];
 
     // Add separator view.
